--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,64 @@ body {
     font-size: 16px;
     color: #007BFF;
 }
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: left; /* Vertically center elements */
+    gap: 40px;
+    min-height: 400px;
+    padding-left: -2000px; /* Reduce left padding */
+}
+
+.ratios {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Vertically align buttons */
+    align-items: flex-start; /* Align items to the left */
+}
+
+.ratios h4 {
+    margin-bottom: 10px;
+    font-size: 20px; /* Adjust font size as needed */
+}
+
+
+.ratios button {
+    background-color: #1e1e1e;
+    color: #fff;
+    border: 2px solid #444;
+    border-radius: 5px;
+    padding: 8px;
+    margin: 5px 0;
+    cursor: pointer;
+    width: 90px; /* Reduce width of buttons */
+}
+
+.ratios button:hover {
+    background-color: #7289da;
+}
+
+.ratios button.selected {
+    background-color: #4CAF50;
+}
+
+.ratio-box {
+    background-color: #1e1e1e;
+    margin: 0 auto;
+    border: 2px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px; /* Slightly smaller font */
+    color: white;
+    min-width: 200px;
+    min-height: 200px;
+}
+
+.ratio-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px; /* Adjust height as needed */
+}
